One speaker box short

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -415,6 +415,17 @@
             </div>
           </div>
 
+          <div class="speaker col-md-3">
+            <div class="thumbnail">
+            <a href="/speakers"><img src="/images/gopher.jpg" alt="Speakers"></a>
+            <div class="caption">
+                <h4><a href="/speakers">To be Announced</a></h4>
+                <span class="title">Keep checking back as there are more gophers to be revealed.</span>
+                <div class="handle">
+                </div>
+              </div>
+            </div>
+          </div>
 
           <div class="speaker col-md-3">
             <div class="thumbnail">
