Speakers Round 3 on homepage, and photo updates

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -379,10 +379,10 @@
 
           <div class="speaker col-md-3">
             <div class="thumbnail">
-            <a href="/speakers"><img src="/images/gopher.jpg" alt="Speakers"></a>
+            <a href="/speakers/audrey-lim"><img src="/images/speakers/audrey-lim.jpg" alt="Audrey Lim"></a>
             <div class="caption">
-                <h4><a href="/speakers">To be Announced</a></h4>
-                <span class="title">Keep checking back as there are more gophers to be revealed.</span>
+                <h4><a href="/speakers/audrey-lim">Audrey Lim</a></h4>
+                <span class="title">Developer Evangelist at Nitrous.IO</span>
                 <div class="handle">
                 </div>
               </div>
@@ -391,10 +391,10 @@
 
           <div class="speaker col-md-3">
             <div class="thumbnail">
-            <a href="/speakers"><img src="/images/gopher.jpg" alt="Speakers"></a>
+            <a href="/speakers/blake-caldwell"><img src="/images/speakers/blakecaldwell.png" alt="Blake Caldwell"></a>
             <div class="caption">
-                <h4><a href="/speakers">To be Announced</a></h4>
-                <span class="title">Keep checking back as there are more gophers to be revealed.</span>
+                <h4><a href="/speakers/blake-caldwell">Blake Caldwell</a></h4>
+                <span class="title">Developer, Fog Creek Software</span>
                 <div class="handle">
                 </div>
               </div>
@@ -405,10 +405,10 @@
         <div class="col-md-10 col-md-offset-1">
           <div class="speaker col-md-3">
             <div class="thumbnail">
-            <a href="/speakers"><img src="/images/gopher.jpg" alt="Speakers"></a>
+            <a href="/speakers/katherine-cox-buday"><img src="/images/speakers/katherine-cox-buday.jpg" alt="Katherine Cox-Buday"></a>
             <div class="caption">
-                <h4><a href="/speakers">To be Announced</a></h4>
-                <span class="title">Keep checking back as there are more gophers to be revealed.</span>
+                <h4><a href="/speakers/katherine-cox-buday">Katherine Cox-Buday</a></h4>
+                <span class="title">Software Engineer at Canonical</span>
                 <div class="handle">
                 </div>
               </div>
@@ -417,10 +417,10 @@
 
           <div class="speaker col-md-3">
             <div class="thumbnail">
-            <a href="/speakers"><img src="/images/gopher.jpg" alt="Speakers"></a>
+            <a href="/speakers/abhishek-kona"><img src="/images/speakers/abhishek-kona.png" alt="Abhishek Kona"></a>
             <div class="caption">
-                <h4><a href="/speakers">To be Announced</a></h4>
-                <span class="title">Keep checking back as there are more gophers to be revealed.</span>
+                <h4><a href="/speakers/abhishek-kona">Abhishek Kona</a></h4>
+                <span class="title">Engineer at Parse.com</span>
                 <div class="handle">
                 </div>
               </div>
@@ -429,10 +429,10 @@
 
           <div class="speaker col-md-3">
             <div class="thumbnail">
-            <a href="/speakers"><img src="/images/gopher.jpg" alt="Speakers"></a>
+            <a href="/speakers/bjorn-rabenstein"><img src="/images/speakers/bjorn-rabenstein.jpg" alt="Björn Rabenstein"></a>
             <div class="caption">
-                <h4><a href="/speakers">To be Announced</a></h4>
-                <span class="title">Keep checking back as there are more gophers to be revealed.</span>
+                <h4><a href="/speakers/bjorn-rabenstein">Björn Rabenstein</a></h4>
+                <span class="title">Production Engineer at SoundCloud</span>
                 <div class="handle">
                 </div>
               </div>
