Fixed responsive styles for mobile ( Phone & Tablet ) screens on the Home Page

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -73,6 +73,7 @@
         	<div style="display: none;" class="mobile-buttons">
             	<a href="https://ti.to/gophercon/gophercon-2015" class="btn btn-orange" target="_blank" class="btn btn-orange">Tickets</a>
                 <a href="/speakers" class="btn btn-blue" target="_blank">Speakers</a>
+                <div class="clearfix"></div>
             </div>
         </div>
     </div>
@@ -650,7 +651,7 @@
           </section>
       </div>
 
-      <div class="clear:both"></div>
+      <div class="clearfix"></div>
   </section>
 </main>
 
