Schedule for Day 1

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -576,7 +576,7 @@
                   <div id="day1-schedule" class="tab-pane schedule-item-tab schedule-tab">
                     <div class="row schedule-item">
                       <div class="col-md-3 schedule-item-slot">
-                        <span class="time">8:30am - 8:40pm</span>
+                        <span class="time">8:30am - 8:40am</span>
                         <span class="location">Location: Main Theatre</span>
                       </div>
                       <div class="col-md-9 schedule-item-details">
@@ -590,7 +590,7 @@
                     </div>
                     <div class="row schedule-item">
                       <div class="col-md-3 schedule-item-slot">
-                        <span class="time">8:40am - 9:25pm</span>
+                        <span class="time">8:40am - 9:25am</span>
                         <span class="location">Location: Main Theatre</span>
                       </div>
                       <div class="col-md-9 schedule-item-details">
@@ -603,6 +603,231 @@
                         </div>
                         <div class="abstract">
                           <p></p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row schedule-item">
+                      <div class="col-md-3 schedule-item-slot">
+                        <span class="time">9:30am - 10:00am</span>
+                        <span class="location">Location: Main Theatre</span>
+                      </div>
+                      <div class="col-md-9 schedule-item-details">
+                        <div class="schedule-item-summary">
+                          <span class="title"><a href="/talks/go-kit">Go Kit: A Standard Library for Distributed Programming</a></span>
+                          <div class="speaker">
+                            <span class="name"><a href="/speakers/peter-bourgon">Peter Bourgon</a></span>
+                          </div>
+                        </div>
+                        <div class="abstract">
+                          <p>Go has emerged as the language of the server, but it remains underrepresented in large, consumer-focused companies like Facebook, Twitter, Netflix, and SoundCloud. These organizations have largely adopted JVM-based tech stacks for their business logic, owing in large part to libraries and ecosystems that directly support their service-oriented architectures.</p>
+                          <p>To reach its next level of success, Go needs more than simple primitives and idioms. It needs a comprehensive toolkit, for coherent distributed programming in the large. This talk describes Go kit, a toolkit for Go in the modern SOA.</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row schedule-item">
+                      <div class="col-md-3 schedule-item-slot">
+                        <span class="time">10:00am - 10:40am</span>
+                      </div>
+                      <div class="col-md-9 schedule-item-details">
+                        <div class="schedule-item-summary">
+                          <span class="title">Break</span>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row schedule-item">
+                      <div class="col-md-3 schedule-item-slot">
+                        <span class="time">10:40am - 11:10am</span>
+                        <span class="location">Location: Main Theatre</span>
+                      </div>
+                      <div class="col-md-9 schedule-item-details">
+                        <div class="schedule-item-summary">
+                          <span class="title"><a href="/talks/delve">Delve Into Go</a></span>
+                          <div class="speaker">
+                            <span class="name"><a href="/speakers/derek-parker">Derek Parker</a></span>
+                          </div>
+                        </div>
+                        <div class="abstract">
+                          <p>A good debugger is an essential tool for any software engineer – but Go has some unique characteristics (the runtime scheduler, for instance) that make traditional debuggers unfeasible. So I wrote Delve, a debugger tailored specifically for Go.</p>
+                          <p>When your software misbehaves, how can you glean insight into its unruliness?</p>
+                          <p>To answer that we’ll take a deep dive into Delve. We’ll explore what makes software like Delve work, how it aims to solve problems with existing debuggers, and how you can leverage Delve.</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row schedule-item">
+                      <div class="col-md-3 schedule-item-slot">
+                        <span class="time">11:15am - 11:45am</span>
+                        <span class="location">Location: Main Theatre</span>
+                      </div>
+                      <div class="col-md-9 schedule-item-details">
+                        <div class="schedule-item-summary">
+                          <span class="title"><a href="/talks/code-generation">Code Generation For The Sake Of Consistency</a></span>
+                          <div class="speaker">
+                            <span class="name"><a href="/speakers/sarah-adams">Sarah Adams</a></span>
+                            <span class="designation">Software Engineer at Restless Bandit</span>
+                          </div>
+                        </div>
+                        <div class="abstract">
+                          <p>Maintaining consistency within a growing project is a challenge. I have struggled with my company’s Go web API as it has grown over the past two years, trying to find a nice solution to this intra-project consistency problem without resorting to a large-scale framework.</p>
+                          <p>In my mind, there are three general layers to project consistency:</p>
+                          <ul>
+                            <li>consistency in implementation among similar bits of code</li>
+                            <li>consistency in black-box behavior among similar endpoints or commands</li>
+                            <li>consistency between actual behavior and documented behavior (documentation accuracy)</li>
+                          </ul>
+                          <p>This talk will outline how I have leveraged small-scale code and documentation generator tools for each of the three layers outlined above, specifically for the sake of consistency in a growing Go application without using a large-scale framework.</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row schedule-item">
+                      <div class="col-md-3 schedule-item-slot">
+                        <span class="time">11:50am - 12:20pm</span>
+                        <span class="location">Location: Main Theatre</span>
+                      </div>
+                      <div class="col-md-9 schedule-item-details">
+                        <div class="schedule-item-summary">
+                          <span class="title"><a href="/talks/deadlocks-leaks">A Practical Guide to Preventing Deadlocks and Leaks in Go</a></span>
+                          <div class="speaker">
+                            <span class="name"><a href="/speakers/richard-fliam">Richard Fliam</a></span>
+                            <span class="designation">Software Engineer Lead on Comcast VIPER’s Pillar linear packager</span>
+                          </div>
+                        </div>
+                        <div class="abstract">
+                          <p>Communicating Sequential Processes (CSP) are a foundational element of writing Go code. Our Go application, Pillar, processes 15 gigabits per second, packages over 3000 channels, serves millions of users, and runs on more than 450 servers nationwide.</p>
+                          <p>While writing Pillar, we developed five guidelines for the use of Go and CSP. Guidelines that helped us prevent deadlocks, prevent resource leaks, and simplified our code. Go developers will find lasting value in these battle-tested guidelines.</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row schedule-item">
+                      <div class="col-md-3 schedule-item-slot">
+                        <span class="time">12:20pm - 1:20pm</span>
+                      </div>
+                      <div class="col-md-9 schedule-item-details">
+                        <div class="schedule-item-summary">
+                          <span class="title">Lunch</span>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row schedule-item">
+                      <div class="col-md-3 schedule-item-slot">
+                        <span class="time">8:40am - 9:25pm</span>
+                        <span class="location">Location: Main Theatre</span>
+                      </div>
+                      <div class="col-md-9 schedule-item-details">
+                        <div class="schedule-item-summary">
+                          <span class="title"><a href="/talks/garbage-collection">Go GC: Solving the Latency Problem</a></span>
+                          <div class="speaker">
+                            <span class="name"><a href="/speakers/rick-hudson">Rick Hudson</a></span>
+                            <span class="designation">Engineer at Google</span>
+                          </div>
+                        </div>
+                        <div class="abstract">
+                          <p>Long garbage collection (GC) pauses stand directly in the way of Go’s growth. It is an important, and often times the only, technical reason practitioners give for not migrating to managed runtimes such as Go. If Go is to live up to its promise of providing a better place for developers it must eliminate long GC pauses.</p>
+                          <p>This talk presents and discusses the new 1.5 low latency concurrent GC. Motivations will be given, performance numbers will be presented, we will
+                          deep dive into some technical challenges, but more importantly we will discuss why this approach fits well with the Go language.</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row schedule-item">
+                      <div class="col-md-3 schedule-item-slot">
+                        <span class="time">1:55pm - 2:25pm</span>
+                        <span class="location">Location: Main Theatre</span>
+                      </div>
+                      <div class="col-md-9 schedule-item-details">
+                        <div class="schedule-item-summary">
+                          <span class="title"><a href="/talks/simplicity-and-go">Simplicity and Go</a></span>
+                          <div class="speaker">
+                            <span class="name"><a href="/speakers/katherine-cox-buday">Katherine Cox-Buday</a></span>
+                            <span class="designation">Software Engineer at Canonical</span>
+                          </div>
+                        </div>
+                        <div class="abstract">
+                          <p>The mantra of the Go community is “keep it simple”. Sometimes, this idea is distorted to justify poor engineering decisions. In this talk, we’ll explore what simple really means, and what Go brings to the table.</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row schedule-item">
+                      <div class="col-md-3 schedule-item-slot">
+                        <span class="time">2:30pm - 3:00pm</span>
+                        <span class="location">Location: Main Theatre</span>
+                      </div>
+                      <div class="col-md-9 schedule-item-details">
+                        <div class="schedule-item-summary">
+                          <span class="title"><a href="/talks/rebuilding-parse">Rebuilding Parse.com in Go - an opinionated rewrite</a></span>
+                          <div class="speaker">
+                            <span class="name"><a href="/speakers/abhishek-kona">Abhishek Kona</a></span>
+                            <span class="designation">Engineer at Parse.com</span>
+                          </div>
+                        </div>
+                        <div class="abstract">
+                          <p>Learn how Parse.com a backend platform for mobile app developer reinvented its backend stack without breaking compatibility with the existing API using Go as the primary tool. One can say this is upgrading the engine of a plane mid-flight. Come hear about all the war stories.</p>
+                          <p>Find out how at times we did not do things the “Go-Way”. Learn how we were inspired by the Facebook PHP stack.</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row schedule-item">
+                      <div class="col-md-3 schedule-item-slot">
+                        <span class="time">3:00pm - 3:40pm</span>
+                      </div>
+                      <div class="col-md-9 schedule-item-details">
+                        <div class="schedule-item-summary">
+                          <span class="title">Break</span>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row schedule-item">
+                      <div class="col-md-3 schedule-item-slot">
+                        <span class="time">3:40pm - 4:10pm</span>
+                        <span class="location">Location: Main Theatre</span>
+                      </div>
+                      <div class="col-md-9 schedule-item-details">
+                        <div class="schedule-item-summary">
+                          <span class="title"><a href="/talks/prometheus">Prometheus: Designing and Implementing a Modern Monitoring Solution in Go</a></span>
+                          <div class="speaker">
+                            <span class="name"><a href="/speakers/bjorn-rabenstein">Björn Rabenstein</a></span>
+                            <span class="designation">Production Engineer at SoundCloud</span>
+                          </div>
+                        </div>
+                        <div class="abstract">
+                          <p>Many lessons have been learned from more than two years of developing Prometheus. Most of its components are implemented in Go, and we run them at their limits during our day-to-day work at SoundCloud.</p>
+                          <p>This talk will shed light on various aspects of Prometheus from the perspective of a Go developer, from the instrumentation library all the way to the storage backend.</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row schedule-item">
+                      <div class="col-md-3 schedule-item-slot">
+                        <span class="time">4:15pm - 4:45pm</span>
+                        <span class="location">Location: Main Theatre</span>
+                      </div>
+                      <div class="col-md-9 schedule-item-details">
+                        <div class="schedule-item-summary">
+                          <span class="title"><a href="/talks/what-could-go-wrong">What Could Go Wrong?</a></span>
+                          <div class="speaker">
+                            <span class="name"><a href="/speakers/kevin-cantwell">Kevin Cantwell</a></span>
+                            <span class="designation">Lead Architect at Timehop</span>
+                          </div>
+                        </div>
+                        <div class="abstract">
+                          <p>Timehop Engineering has made real strides thanks to using Go in production for two years now and we’ve made plenty of mistakes along the way. Typed nils, bloated interfaces, runaway goroutines, mysterious closure states… you name the mistake, we’ve made it.</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row schedule-item">
+                      <div class="col-md-3 schedule-item-slot">
+                        <span class="time">4:50pm - 5:20pm</span>
+                        <span class="location">Location: Main Theatre</span>
+                      </div>
+                      <div class="col-md-9 schedule-item-details">
+                        <div class="schedule-item-summary">
+                          <span class="title"><a href="/talks/roots-of-go">The Roots of Go</a></span>
+                          <div class="speaker">
+                            <span class="name"><a href="/speakers/baishampayan-ghose">Baishampayan Ghose</a></span>
+                            <span class="designation">Co-founder at Helpshift</span>
+                          </div>
+                        </div>
+                        <div class="abstract">
+                          <p>Every once in a while, a new programming language comes up that fundamentally changes how we think about computing. But even more so often, the core ideas behind a “new” language are hinged upon ideas that were first propounded by languages or systems which are much older.</p>
+                          <p>Often our understanding of a language’s features and the intentions thereof are limited by our understanding of its roots.</p>
+                          <p>In this talk, BG will talk about the origins of the core ideas behind Go and will take you on a “language-archeology” tour where we’ll trace the roots of Go.</p>
                         </div>
                       </div>
                     </div>
