speaker/dmitry-vyukov: added bio, talk and updated title

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -177,7 +177,7 @@
                   </div>
                   <a href="/speakers/dmitry-vyukov">Dmitry Vyukov</a>
                 </h4>
-                <span class="title">Engineer at Google</span>
+                <span class="title">Bug slaughterer at Google</span>
               </div>
             </div>
           </div>
@@ -919,14 +919,14 @@
                       </div>
                       <div class="col-md-9 schedule-item-details">
                         <div class="schedule-item-summary">
-                          <span class="title"><a href="/talks/dmitry-vyukov">Invited Speaker: Dmitry Vyukov</a></span>
+                          <span class="title"><a href="/talks/dmitry-vyukov">Go Dynamic Tools</a></span>
                           <div class="speaker">
                             <span class="name"><a href="/speakers/dmitry-vyukov">Dmitry Vyukov</a></span>
-                            <span class="designation">Engineer at Google</span>
+                            <span class="designation">Bug slaughterer at Google</span>
                           </div>
                         </div>
                         <div class="abstract">
-                          <p>We invited Dmitry Vyukov to join us and talk about all of the amazing things he’s doing to make Go fast and reliable.</p>
+                            <p>Dynamic tools can provide significant value for small time investment. But frequently they are underappreciated by developers. In this talk I will describe three dynamic tools for Go: data race detector, fuzzing system and execution tracer. The first two tools are related to bug finding, and the tracer can give insights into performance and latency issues of Go programs. I will also share our experiences of systematically applying such tools at scale.</p>
                         </div>
                       </div>
                     </div>
