--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -1003,14 +1003,14 @@
                       </div>
                       <div class="col-md-9 schedule-item-details">
                         <div class="schedule-item-summary">
-                          <span class="title"><a href="/talks/learning-go">Cayley: Building a Graph Database</a></span>
+                          <span class="title"><a href="/talks/learning-go">How a complete beginner learned Go as her first backend language in 5 weeks.</a></span>
                           <div class="speaker">
                             <span class="name"><a href="/speakers/audrey-lim">Audrey Lim</a></span>
                             <span class="designation">Developer Evangelist at Nitrous.IO</span>
                           </div>
                         </div>
                         <div class="abstract">
-                          <p>Written in Go, Cayley is a graph database based on technology behind Freebase.com. Starting with a short history of the inspirations behind Cayley, this talk will deep-dive into the moving parts of building a graph database, between the various query languages, the storage engines, and the iterator trees.</p>
+                          <p>Go can be seen as a language that is too difficult for beginner programmers. The resources and documentation for the language seem too technically advanced for the beginner to pick up fundamental programming concepts. Nevertheless within 5 weeks of looking into Go I taught myself how to build my first CRUD web application and a week later, an API client. In this talk I will share my thoughts about why I think Go is a fantastic teaching tool, and why beginners should not be afraid to learn it.</p>
                         </div>
                       </div>
                     </div>
