--- a/themes/gophercon/layouts/partials/navbar.html
+++ b/themes/gophercon/layouts/partials/navbar.html
@@ -22,7 +22,8 @@
       <ul class="nav navbar-nav">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">ABOUT <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
+		  <ul class="dropdown-menu" role="menu">
+            <li><a href="/location">Location</a></li>
             <li><a href="/about">About GopherCon</a></li>
             <li><a href="/code-of-conduct">Code of Conduct</a></li>
           </ul>
