--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -1209,7 +1209,7 @@
                         </span>
                         <div class="speaker">
                           <span class="name">
-                            <a href="/speakers/sam-hellman">Sam Hellman</a>
+                            <a href="/speakers/sam-helman">Sam Helman</a>
                           </span>
                           <span class="designation">Software Engineer at Flatiron Health</span>
                         </div>
