--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -496,7 +496,7 @@
                       <div class="row schedule-item">
                         <div class="col-md-3 schedule-item-slot">
                           <span class="time">9:00am - 5:00pm</span>
-                          <span class="location">Location: TBD</span>
+                          <span class="location">Location: Room 301</span>
                         </div>
                         <div class="col-md-9 schedule-item-details">
                           <div class="schedule-item-summary">
@@ -538,7 +538,7 @@
                       <div class="row schedule-item">
                         <div class="col-md-3 schedule-item-slot">
                           <span class="time">9:00am - 10:45am</span>
-                          <span class="location">Location: TBD</span>
+                          <span class="location">Location: Room 302</span>
                         </div>
                         <div class="col-md-9 schedule-item-details">
                           <div class="schedule-item-summary">
@@ -564,7 +564,7 @@
                       <div class="row schedule-item">
                         <div class="col-md-3 schedule-item-slot">
                           <span class="time">11:00am - 12:45pm</span>
-                          <span class="location">Location: TBD</span>
+                          <span class="location">Location: Room 302</span>
                         </div>
                         <div class="col-md-9 schedule-item-details">
                           <div class="schedule-item-summary">
@@ -590,7 +590,7 @@
                       <div class="row schedule-item">
                         <div class="col-md-3 schedule-item-slot">
                           <span class="time">1:30pm - 5:00pm</span>
-                          <span class="location">Location: TBD</span>
+                          <span class="location">Location: Room 302</span>
                         </div>
                         <div class="col-md-9 schedule-item-details">
                           <div class="schedule-item-summary">
