--- a/themes/gophercon/layouts/partials/navbar.html
+++ b/themes/gophercon/layouts/partials/navbar.html
@@ -47,6 +47,7 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">EVENTS <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
+            <li><a href="http://www.meetup.com/Denver-Go-Language-User-Group/events/222335594/">Kickoff Party</a></li>
             <li><a href="/events/after-party">After Party</a></li>
           </ul>
         </li>
