--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -1417,8 +1417,7 @@
                 <br />Code: GopherCon</p>
             </div>
             <div style="float:right">
-              <a href="http://homewoodsuites.hilton.com/en/hw/groups/personalized/D/DENDCHW-GOP-
-20150705/index.jhtml" class="btn btn-orange" target="_blank">Book</a>
+              <div class="btn btn-danger" target="_blank">Sold Out!</div>
             </div>
           </section>
         </div>
