Update Peter's employer on homepage

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -277,7 +277,7 @@
                   <h4>
                     <a href="/speakers/peter-bourgon">Peter Bourgon</a>
                   </h4>
-                  <span class="title">Engineer at SoundCloud</span>
+                  <span class="title">Engineer at Weaveworks</span>
                   <div class="handle"></div>
                 </div>
               </div>
