--- a/themes/gophercon/layouts/partials/navbar.html
+++ b/themes/gophercon/layouts/partials/navbar.html
@@ -41,7 +41,11 @@
             <li><a href="/#workshop-schedule">Workshops</a></li>
             <li><a href="/#keynotes">Keynotes</a></li>
 			<li><a href="/speakers">Speakers</a></li>
-            <li><a href="/talks">Talks</a></li>
+			<li><a href="/talks">Talks</a></li>
+			<li><a href="/schedule/7july">July 7th Workshops</a></li>
+			<li><a href="/schedule/8july">July 8th Day 1</a></li>
+			<li><a href="/schedule/9july">July 9th Day 2</a></li>
+			<li><a href="/schedule/july10">July 10th Hack Day</a></li>
           </ul>
         </li>
         <li class="dropdown">
